syntax = "proto3";

import "common.proto";

package cvm.wallet;

message AccountsPacket {
  oneof request {
    DepositNotificationPacket deposit = 1;
    RelayedRequestPacket relayed_request = 2;
  }

  // next tag: 3
}

message DepositNotificationPacket {
  cvm.common.Uint128 deposit_id = 1;
  string account = 2;
  repeated Deposit deposits = 3;

  // next tag: 4
}

message Deposit {
  cvm.common.Uint128 asset_id = 1;
  cvm.common.Uint128 amount = 2;

  // next tag: 3
}

message RelayedRequestPacket {
  string address = 1;
  string account = 2;
  oneof request {
    DropAccountRequest drop_account = 3;
    ExecuteSolutionRequest execute_solution = 4;
  }

  // next tag: 5
}

message DropAccountRequest {
  string beneficiary_account = 1;

  // next tag: 2
}

message ExecuteSolutionRequest {
  // next tag: 1
}
